metadata/force-app/main/default/objects/CustomName_wvuhP__c/CustomName_wvuhP__c.object-meta.xml
<CustomObject>
    <description>Description_YuDCE</description>
    <label>CustomLabel_ENyqr</label>
    <nameField>
        <label>CustomLabel_ENyqr</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_ENyqrs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>