metadata/force-app/main/default/objects/CustomName_wvuhP__c/fields/CustomField_vGuRu__c.field-meta.xml
<CustomField>
    <fullName>CustomField_vGuRu__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldVoJGh</label>
    <length>255</length>
    <type>Text</type>
</CustomField>