metadata/force-app/main/default/objects/CustomName_wvuhP__c/fields/CustomField_YraaX__c.field-meta.xml
<CustomField>
    <fullName>CustomField_YraaX__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldgvlWW</label>
    <length>255</length>
    <type>Text</type>
</CustomField>